--- a/PhaseB/MovieOn/src/main/resources/application.properties
+++ b/PhaseB/MovieOn/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://cs5200-spring2018-kumar.cbomr1jtlfgn.us-east-2.rds.amazonaws.com/cs5200_MovieOn?useSSL=false
 spring.datasource.username=akumar
 spring.datasource.password=Aditya*123
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
