--- a/PhaseB/MovieOn/src/main/resources/application.properties
+++ b/PhaseB/MovieOn/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.datasource.url=jdbc:mysql://cs5200-spring2018-kumar.cbomr1jtlfgn.us-east-
 spring.datasource.username=akumar
 spring.datasource.password=Aditya*123
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
